# CPP-OOP

./: README.md
CSVParser/: C++ template task.docx  CSVParser.h  Exceptions.h  TupleHandle.h  input1.csv  main.cpp
RNA/: RNA.cpp  RNA.hpp  test.cpp
RobotsOnMars/: .gitignore  CMakeLists.txt  labyrinth.txt  large.txt  main.cpp  map.txt
RobotsOnMars/Application/: App.cpp  App.h  Manager.cpp  Manager.h  Simulation.h  View.cpp  View.h
RobotsOnMars/Commands/: ChangeMode.cpp  ChangeMode.h  Grab.cpp  Grab.h  ICommand.h  ManualCommands.cpp  ManualCommands.h  Move.cpp  Move.h  Quit.h  SapperManagement.cpp  SapperManagement.h  Scan.cpp  Scan.h
RobotsOnMars/Console/: CommandParser.cpp  CommandParser.h  ConsoleArgs.cpp  ConsoleArgs.h  MapLoader.cpp  MapLoader.h  Parser.cpp  Parser.h
RobotsOnMars/GameModes/: AutoGrab.cpp  AutoGrab.h  AutoMode.cpp  AutoMode.h  AutoScan.cpp  AutoScan.h  InactiveMode.cpp  InactiveMode.h  ManualMode.cpp  ManualMode.h  ModeBasement.cpp  ModeBasement.h
RobotsOnMars/Player/: Player.cpp  Player.h
RobotsOnMars/Robot/: Collector.cpp  Collector.h  Coordinates.h  Direction.h  Robot.cpp  Robot.h  Sapper.cpp  Sapper.h  Server.cpp  Server.h
RobotsOnMars/World/: Cell.cpp  Cell.h  Coordinates.h  GameArea.cpp  GameArea.h  MapLoader.cpp  MapLoader.h  World.cpp  World.h
Workflow/: CMakeLists.txt  OOP C++ Task 2 (Workflow Executor).docx  Parser.cpp  Parser.h  Workflow.cpp  Workflow.h  main.cpp
Workflow/Blocks/: BlockFactory.cpp  BlockFactory.h  BlockMaker.h  Dump.cpp  Dump.h  Grep.cpp  Grep.h  IBlockMaker.h  IWorker.h  ReadFile.cpp  ReadFile.h  Replace.cpp  Replace.h  Sort.cpp  Sort.h  WriteFile.cpp  WriteFile.h
Workflow/WorkFiles/: Rita_Hayworth_and_Shawshank_Redemption.txt  in.txt  out.txt  workflow.txt  workflow1.txt  workflow2.txt  workflow3.txt
